# pechincha

./: Cargo.toml  README.md  ROADMAP.md  compass_artifact_wf-cce67d1a-c766-4b48-bb68-346ca56c76bc_text_markdown.md
.playwright-mcp/: keepa-br-compare.md  keepa-br.md  keepa-details.md  keepa-snapshot.md
src/: browser.rs  cache.rs  cdp.rs  config.rs  cookies.rs  currency.rs  daemon.rs  display.rs  error.rs  history.rs  keepa.rs  lib.rs  main.rs  models.rs  notify.rs  scoring.rs  scraping.rs  search.rs  tax.rs  watch.rs
src/providers/: aliexpress.rs  amazon.rs  amazon_us.rs  ebay.rs  google_shopping.rs  kabum.rs  magalu.rs  mercadolivre.rs  mod.rs  olx.rs  shopee.rs
tests/: ml_scrape_test.rs
tests/fixtures/: ali_network.txt  ml_network.txt  ml_search_page.html  ml_snapshot.md  shopee_network.txt
